update assign schedule
